# seq-view

./: Cargo.toml  README.md
src/: main.rs
