[package]
name = "seq_view"
version = "0.1.0"
authors = ["Utkarsh Sinha <sinha.utkarsh1990@gmail.com>"]

[dependencies]
bitflags = "*"
clock_ticks = "0.0.6"
elmesque = "0.8.1"
json_io = "0.1.2"
petgraph = "0.1.10"
pistoncore-input = "0.5.0"
piston2d-graphics = "0.9.0"
num = "*"
rand = "*"
vecmath = "0.1.1"
conrod = "*"
find_folder = "0.2.0"
gfx = "0.7.0"
gfx_device_gl = "0.5.0"
piston-viewport = "0.1.0"
piston_window = "0.20.0"
piston2d-gfx_graphics = "0.9.0"
piston2d-opengl_graphics = "0.11.0"
pistoncore-window = "0.9.0"
pistoncore-glutin_window = "0.12.0"
piston = "0.10.1"
docopt = "0.6"
rustc-serialize = "0.3"
image = "0.3.13"
piston-texture = "0.2.3"
